[#19326] build fix